--- a/hotels/templates/book_confirm_email.html
+++ b/hotels/templates/book_confirm_email.html
@@ -8,7 +8,7 @@
         <li>Hotel Name: {{ hotel_name }}</li>
         <li>Start Date: {{ start_date }}</li>
         <li>End Date: {{ end_date }}</li>
-        <li>Total Cost: {{ total_cost }}</li>
+        <li>Total Cost: ${{ total_cost }}</li>
     </ul>
     <p>Please click <a href="{{ pdf_link }}">here</a> to download your booking details.</p>
     <p>Thank you!</p>
