--- a/account/templates/successful.html
+++ b/account/templates/successful.html
@@ -57,7 +57,7 @@
         <div class="icon">✔️</div>
         <h1>Email Successfully Verified</h1>
         <p>Your email address has been successfully verified. You can now proceed to log in.</p>
-        <a href="login.html" class="btn">Go to Login</a>
+        <a href="#" class="btn">Go to Login</a>
     </div>
 </body>
 </html>
