--- a/hotels/templates/book_confirm_email.html
+++ b/hotels/templates/book_confirm_email.html
@@ -10,7 +10,7 @@
         <li>End Date: {{ end_date }}</li>
         <li>Total Cost: ${{ total_cost }}</li>
     </ul>
-    <p>Please click <a href="{{ pdf_link }}">here</a> to download your booking details.</p>
+    <p>Please click here <a href="{{ pdf_link }}">PDF Download</a> to download your booking details.</p>
     <p>Thank you!</p>
 </body>
 </html>
