--- a/hotels/templates/booking_details.html
+++ b/hotels/templates/booking_details.html
@@ -95,13 +95,26 @@
             width: 100px;
             height: 100px;
         }
+   
+        .img{
+            max-width: 200px;
+            justify-content: center;
+            align-items: center;
+            margin: auto;
+        }
+        .color{
+            color: #efefef;
+        }
     </style>
 </head>
 
 <body>
     <div class="ticket">
         <div class="ticket-header">
-            <h1>Booking Confirmation</h1>
+            <div class="img">
+                <img class="img" src="./img/blu.png" alt="logo">
+            </div>
+            <h1 class="color">Booking Confirmation</h1>
         </div>
         <div class="ticket-body">
             <div class="ticket-info">
