--- a/payment/templates/book_confirm_email.html
+++ b/payment/templates/book_confirm_email.html
@@ -1,8 +1,8 @@
 <html>
 <body>
-    <h2>Booking Confirmation</h2>
+    <h2>Booking Confirmation! Waiting for Payment celar.</h2>
     <p>Dear {{ user.username }},</p>
-    <p>Thank you for booking with us. Here are your booking details:</p>
+    <p>Thank you for booking with us. Here are your booking details.</p>
     <ul>
         <li>Hotel Name: {{ hotel_name }}</li>
         <li>Start Date: {{ start_date }}</li>
