--- a/payment/templates/booking_success.html
+++ b/payment/templates/booking_success.html
@@ -53,12 +53,22 @@
         <p>We are pleased to confirm your booking at <strong>{{ hotel_name }}</strong> from <strong>{{ start_date }}</strong> to <strong>{{ end_date }}</strong>.</p>
         <p>Total Cost: ${{ total_cost }}</p>
         <p>A confirmation email with details has been sent to <strong>{{ user_email }}</strong>.</p>
-        <p>You can download your booking receipt <a href="{{ pdf_link }}" class="link-btn">here</a>.</p>
+        <p>You can download your booking receipt <a href="{{ pdf_link }}" class="">Download Pdf</a>.</p>
         <p>Thank you for choosing our service.</p>
+        <p> <a id="homeLink" href="https://bluskybooking.netlify.app/" class="btn btn-primary">Home</a></p>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const homeLink = document.getElementById('homeLink');
+            homeLink.addEventListener('click', function (event) {
+                event.preventDefault(); // Prevent the default link behavior
+                window.location.href = 'https://bluskybooking.netlify.app/';
+            });
+        });
+    </script>
 </body>
 
 </html>
