update html code

--- a/payment/templates/booking_success.html
+++ b/payment/templates/booking_success.html
@@ -64,7 +64,7 @@
         document.addEventListener('DOMContentLoaded', function () {
             const homeLink = document.getElementById('homeLink');
             homeLink.addEventListener('click', function (event) {
-                event.preventDefault(); // Prevent the default link behavior
+                event.preventDefault();
                 window.location.href = 'https://bluskybooking.netlify.app/';
             });
         });
