--- a/payment/templates/book_confirm_email.html
+++ b/payment/templates/book_confirm_email.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-    <h2>Booking Confirmation! Waiting for Payment celar.</h2>
+    <h2>Booking Confirmation!</h2>
     <p>Dear {{ user.username }},</p>
     <p>Thank you for booking with us. Here are your booking details.</p>
     <ul>
